# mm-node-checker

./: .env.example  README.md  dict.dic  justfile  pyproject.toml
docker/: Dockerfile
src/app/: __init__.py  config.py  main.py  settings.py  telegram_bot.py  telegram_handlers.py
src/app/core/: core.py  db.py  rpc.py  types.py  types_.py
src/app/core/services/: __init__.py  node.py  node_service.py  proxy.py
src/app/server/: jinja.py
src/app/server/routers/: __init__.py  check.py  check_router.py  node.py  node_router.py  proxy.py  ui.py  ui_router.py
src/app/server/templates/: checks.j2  index.j2  networks.j2  nodes.j2
