[project]
name = "app"
version = "0.2.5"
description = ""
requires-python = ">=3.14"
dependencies = ["mm-base6==0.8.1", "mm-web3~=0.5.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "bandit~=1.9.3",
    "mypy~=1.19.1",
    "pip-audit~=2.10.0",
    "pytest~=9.0.2",
    "pytest-xdist~=3.8.0",
    "pytest-httpserver~=1.1.3",
    "ruff~=0.14.14",
    "watchfiles~=1.1.0",
]

[tool.mypy]
python_version = "3.14"
mypy_path = "stubs"
warn_no_return = false
strict = true
plugins = "pydantic.mypy"
exclude = ["^tests/", "^cookiecutter", "^demo/"]

[tool.ruff]
line-length = 130
target-version = "py314"
exclude = ["demo/", "cookiecutter/"]
[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "TC",       # flake8-type-checking, TYPE_CHECKING is dangerous, for example it doesn't work with pydantic
    "A005",     # flake8-builtins: stdlib-module-shadowing
    "ERA001",   # eradicate: commented-out-code
    "PT",       # flake8-pytest-style
    "D",        # pydocstyle
    "FIX",      # flake8-fixme
    "PLR0911",  # pylint: too-many-return-statements
    "PLR0912",  # pylint: too-many-branches
    "PLR0913",  # pylint: too-many-arguments
    "PLR2004",  # pylint: magic-value-comparison
    "PLC0414",  # pylint: useless-import-alias
    "FBT",      # flake8-boolean-trap
    "EM",       # flake8-errmsg
    "TRY003",   # tryceratops: raise-vanilla-args
    "C901",     # mccabe: complex-structure,
    "BLE001",   # flake8-blind-except
    "S311",     # bandit: suspicious-non-cryptographic-random-usage
    "TD002",    # flake8-todos: missing-todo-author
    "TD003",    # flake8-todos: missing-todo-link
    "RET503",   # flake8-return: implicit-return
    "RUF012",   # ruff: mutable-class-default
    "COM812",   # it's used in ruff formatter
    "ASYNC109",
]
[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id"]
[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["field_validator"]
[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["ANN", "S"]
[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B311"]

[tool.pytest.ini_options]
addopts = "-n auto"
